--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.1.7",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "qrcode-svg": "^1.1.0",
+    "sjcl": "^1.0.8",
     "vue": "^3.2.13"
   },
   "devDependencies": {
